crates/core/tests/snapshots/derive_schematic_test__standalone__unnamed_struct.snap
---
source: crates/core/tests/derive_schematic_test.rs
expression: pretty(output.to_token_stream())
---
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema.tuple(TupleType::new([schema.infer::<bool>(), schema.infer::<usize>()]))
    }
}
